--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
-body {
-    font-family: arial
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@300&display=swap');
+* {
+    margin:0;
+    padding:0;
+    border:0;
 }
+body {
+    font-family:lato;
+    font-weight: 300px;
+}
+
