--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 body {
     font-family:lato;
     font-weight: 300px;
-    color: #3a3a3a;
+    color: #2a2a2a;
 }
 
 /* headings and logo */
@@ -22,4 +22,32 @@ h1, h2 {
 #logo {
     float: left;
     font-size: 280%;
+}
+
+#menu {
+    font-size: 100%;
+    letter-spacing: 4px;
+}
+
+#menu, #logo {
+    line-height:75px;
+}
+
+#menu li {
+    float: right;
+    list-style-type: none;
+    margin-right: 30px;
+}
+
+#menu a {
+    text-decoration: none;
+    color: inherit;
+}
+
+#menu a:hover {
+    border-bottom: 1px solid #3a3a3a;
+}
+
+.active {
+    border-bottom: 1px solid #3a3a3a;
 }
