--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,6 +268,13 @@ footer {
         float: left;
         padding: 0;
     }
+    #times > div {
+        width: 100%;
+        clear: both;
+        height: 150px;
+        padding: 0;
+    }
+
     hr {
         display: none;
     }
@@ -302,5 +309,5 @@ footer {
         text-align: center;
         padding: 0 20px;
     }
-    
+
 }
