--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -309,5 +309,8 @@ footer {
         text-align: center;
         padding: 0 20px;
     }
-
+    #photos {
+        column-count: 3;
+    }
+    
 }
